feat: test lint

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,6 @@
   <span className="font-size-text mt05">Code: mockado</span>
   <button onClick={changeTheme}>Troca</button>
 </div>
+
+
+<footer>aaaaaa</footer>
