--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -29,7 +29,7 @@ html[data-theme='dark'] {
 }
 
 .text-color {
-  color: var(--text-color);
+  color: var(--text-color) !important;
 }
 
 .text-accent-color {
