--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,1 @@
-<nav class="p05 flex flex-column accent-container">
-  <h1 class="font-size-title">What Happened in that Day</h1>
-
-  <span class="font-size-text mt05">Code: mockado</span>
-  <button (click)="changeTheme()">Troca</button>
-</nav>
-
-<div></div>
-
-<footer>aaaaaa</footer>
+<router-outlet></router-outlet>
