feat: better share module

--- a/src/app/rpg-angular/body/body.component.html
+++ b/src/app/rpg-angular/body/body.component.html
@@ -2,6 +2,7 @@
   <app-header></app-header>
   <div class="p1 flex-fill">
     <span>Ficha: Código da ficha</span>
+    <app-player-traits></app-player-traits>
   </div>
   <app-footer></app-footer>
 </div>
