--- a/src/app/components/player-traits/player-traits.component.html
+++ b/src/app/components/player-traits/player-traits.component.html
@@ -1,1 +1,16 @@
-<div>adsad</div>
+<div class="flex flex-column gap05">
+  <div class="search-container mt-2 mb-05">
+    <input [formControl]="name" type="text" class="w-100" placeholder="Nome" />
+  </div>
+
+  <div class="flex gap1">
+    <div>
+      <label>Vida: </label>
+      <input [formControl]="name" type="text" class="w-100" placeholder="Nome" />
+    </div>
+    <div>
+      <label>Estabilidade: </label>
+      <input [formControl]="name" type="text" class="w-100" placeholder="Nome" />
+    </div>
+  </div>
+</div>
