--- a/src/app/rpg-angular/body/body.component.html
+++ b/src/app/rpg-angular/body/body.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <app-header></app-header>
-  <div class="p1 flex-fill">
+  <div class="p1 flex-fill background-color text-color">
     <span>Ficha: Código da ficha</span>
     <app-player-traits></app-player-traits>
   </div>
