--- a/src/app/components/player-traits/player-traits.component.html
+++ b/src/app/components/player-traits/player-traits.component.html
@@ -6,11 +6,11 @@
   <div class="flex gap1">
     <div>
       <label>Vida: </label>
-      <input [formControl]="name" type="text" class="w-100" placeholder="Nome" />
+      <input [formControl]="name" type="text" class="w-100" placeholder="Vida" />
     </div>
     <div>
       <label>Estabilidade: </label>
-      <input [formControl]="name" type="text" class="w-100" placeholder="Nome" />
+      <input [formControl]="name" type="text" class="w-100" placeholder="Estabilidade" />
     </div>
   </div>
 </div>
