feat: player stats

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,20 +1,22 @@
-<footer class="p2 flex flex-column accent-container align-center gap1">
-  <span class="font-size-title">Created By Felipe Scherer</span>
-  <div class="flex gap1">
-    <a href="https://www.linkedin.com/in/ofelipescherer/" target="_blank" alt="Linkedin">
-      <img
-        src="https://img.shields.io/badge/-Linkedin-0e76a8?logo=Linkedin&logoColor=white&https://www.linkedin.com/in/ofelipescherer/"
-    /></a>
+<footer class="accent-container">
+  <div class="p2 flex flex-column align-center gap1">
+    <span class="font-size-title">Created By Felipe Scherer</span>
+    <div class="flex gap1">
+      <a href="https://www.linkedin.com/in/ofelipescherer/" target="_blank" alt="Linkedin">
+        <img
+          src="https://img.shields.io/badge/-Linkedin-0e76a8?logo=Linkedin&logoColor=white&https://www.linkedin.com/in/ofelipescherer/"
+      /></a>
 
-    <a href="https://github.com/ofelipescherer" target="_blank" alt="Github">
-      <img
-        src="https://img.shields.io/badge/-Github-100000?logo=github&logoColor=white&link=https://github.com/ofelipescherer"
-    /></a>
+      <a href="https://github.com/ofelipescherer" target="_blank" alt="Github">
+        <img
+          src="https://img.shields.io/badge/-Github-100000?logo=github&logoColor=white&link=https://github.com/ofelipescherer"
+      /></a>
 
-    <a href="https://github.com/ofelipescherer" target="_blank" alt="Github">
-      <img src="https://img.shields.io/github/license/ofelipescherer/rpg-angular-v2.svg"
-    /></a>
+      <a href="https://github.com/ofelipescherer" target="_blank" alt="Github">
+        <img src="https://img.shields.io/github/license/ofelipescherer/rpg-angular-v2.svg"
+      /></a>
 
-    <img src="https://img.shields.io/badge/license-MIT-green" />
+      <img src="https://img.shields.io/badge/license-MIT-green" />
+    </div>
   </div>
 </footer>
