--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,8 @@
-<nav class="p05 flex flex-column accent-container">
-  <h1 class="font-size-title">What Happened in that Day</h1>
+<nav class="accent-container">
+  <div class="max-size p05 flex flex-column">
+    <h1 class="font-size-title">What Happened in that Day</h1>
 
-  <span class="font-size-text mt05">Code: mockado</span>
-  <button (click)="changeTheme()">Troca</button>
+    <span class="font-size-text mt05">Code: mockado</span>
+    <button (click)="changeTheme()">Troca</button>
+  </div>
 </nav>
