--- a/src/app/components/player-traits/player-traits.component.html
+++ b/src/app/components/player-traits/player-traits.component.html
@@ -3,14 +3,20 @@
     <input [formControl]="name" type="text" class="w-100" placeholder="Nome" />
   </div>
 
-  <div class="flex gap1">
-    <div>
-      <label>Vida: </label>
-      <input [formControl]="name" type="text" class="w-100" placeholder="Vida" />
+  <div class="flex gap1 align-center justify-between flex-wrap font-size-text">
+    <div class="flex gap1 align-center">
+      <span>Vida: </span>
+      <button class="btn-icon"><span class="material-symbols-outlined"> add </span></button>
+      <span>14/14</span>
+      <button class="btn-icon"><span class="material-symbols-outlined"> remove </span></button>
+      <!-- <input [formControl]="name" type="text" class="w-100" placeholder="Vida" /> -->
     </div>
-    <div>
-      <label>Estabilidade: </label>
-      <input [formControl]="name" type="text" class="w-100" placeholder="Estabilidade" />
+    <div class="flex gap1 align-center">
+      <span>Estabilidade: </span>
+      <button class="btn-icon"><span class="material-symbols-outlined"> add </span></button>
+      <span>14/14</span>
+      <button class="btn-icon"><span class="material-symbols-outlined"> remove </span></button>
+      <!-- <input [formControl]="name" type="text" class="w-100" placeholder="Estabilidade" /> -->
     </div>
   </div>
 </div>
