--- a/src/app/rpg-angular/body/body.component.html
+++ b/src/app/rpg-angular/body/body.component.html
@@ -1,8 +1,10 @@
 <div class="wrapper">
   <app-header></app-header>
-  <div class="p1 flex-fill background-color text-color">
-    <span>Ficha: Código da ficha</span>
-    <app-player-traits></app-player-traits>
+  <div class="background-color text-color flex-fill">
+    <div class="p1 max-size">
+      <span>Ficha: Código da ficha</span>
+      <app-player-traits></app-player-traits>
+    </div>
   </div>
   <app-footer></app-footer>
 </div>
