feat: firebase and service

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,7 @@
 @import './helper.scss';
 @import './reset.scss';
 @import './theme.scss';
+@import '~ngx-toastr/toastr';
 @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
 
 html,
