feat: player attribute

--- a/src/app/rpg-angular/body/body.component.html
+++ b/src/app/rpg-angular/body/body.component.html
@@ -4,6 +4,7 @@
     <div class="p1 max-size">
       <span>Ficha: Código da ficha</span>
       <app-player-traits></app-player-traits>
+      <app-player-attributes></app-player-attributes>
     </div>
   </div>
   <app-footer></app-footer>
