feat: player attributes mock

--- a/src/app/components/player-attributes/player-attribute/player-attribute.component.html
+++ b/src/app/components/player-attributes/player-attribute/player-attribute.component.html
@@ -1,12 +1,13 @@
-<div class="flex justify-between align-center container">
-  <div class="container-value flex p05 flex flex-column align-center">
+<div class="flex align-center container">
+  <div class="container-value flex p05 flex-column align-center">
     <span class="title font-size-title">000</span>
     <span class="subtitle font-size-text">000</span>
   </div>
-  <div class="relative flex pr1">
+  <div class="relative flex flex-fill justify-center">
     <button class="btn-info">
       <span class="material-symbols-outlined"> info </span>
+      <!-- <span>{{ data?.info }}</span> -->
     </button>
-    <span>Medicina</span>
+    <span>{{ data?.title }}</span>
   </div>
 </div>
