--- a/src/app/components/player-attributes/player-attributes.component.html
+++ b/src/app/components/player-attributes/player-attributes.component.html
@@ -1,6 +1,54 @@
 <div class="flex flex-wrap gap05 justify-center align-center">
-  <app-player-attribute></app-player-attribute>
-  <app-player-attribute></app-player-attribute>
-  <app-player-attribute></app-player-attribute>
-  <app-player-attribute></app-player-attribute>
+  <app-player-attribute
+    [data]="{ color: 'E0E722', title: 'Força', info: 'Teste de força armas etc description melhor vai vir' }"
+  ></app-player-attribute>
+  <app-player-attribute
+    [data]="{
+      color: '44D62C',
+      title: 'Destreza',
+      info: 'Teste de Destreza armas etc description melhor vai vir'
+    }"
+  ></app-player-attribute>
+  <app-player-attribute
+    [data]="{
+      color: 'C724B1',
+      title: 'Habilidade',
+      info: 'Teste de Habilidade armas etc description melhor vai vir'
+    }"
+  ></app-player-attribute>
+  <app-player-attribute
+    [data]="{
+      color: 'D22730',
+      title: 'Percepção',
+      info: 'Teste de Percepção armas etc description melhor vai vir'
+    }"
+  ></app-player-attribute>
+  <app-player-attribute
+    [data]="{
+      color: 'C724B1',
+      title: 'Habilidade',
+      info: 'Teste de Habilidade armas etc description melhor vai vir'
+    }"
+  ></app-player-attribute>
+  <app-player-attribute
+    [data]="{
+      color: 'D22730',
+      title: 'Percepção',
+      info: 'Teste de Percepção armas etc description melhor vai vir'
+    }"
+  ></app-player-attribute>
+  <app-player-attribute
+    [data]="{
+      color: 'C724B1',
+      title: 'Habilidade',
+      info: 'Teste de Habilidade armas etc description melhor vai vir'
+    }"
+  ></app-player-attribute>
+  <app-player-attribute
+    [data]="{
+      color: 'D22730',
+      title: 'Percepção',
+      info: 'Teste de Percepção armas etc description melhor vai vir'
+    }"
+  ></app-player-attribute>
 </div>
