--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -31,3 +31,24 @@ h2 {
   font-weight: 400;
   font-size: 24px;
 }
+
+text-area {
+  // padding: .3rem;
+  width: 100%;
+  font-size: 0.9rem;
+  letter-spacing: 0.05rem;
+  resize: vertical;
+  border: 1px solid #7e7e7e;
+  border-radius: 8px;
+  cursor: text;
+  overflow: hidden;
+  min-height: 5rem;
+}
+
+.card {
+  margin: 2rem;
+  padding: 1rem;
+  min-height: 200px;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  border-radius: 6px;
+}
