feat: text area

--- a/src/app/components/text-area-component/text-area-component.component.html
+++ b/src/app/components/text-area-component/text-area-component.component.html
@@ -1,4 +1,4 @@
-<div class="mt1 flex justify-center">
+<div class="mt1 flex flex-column justify-center">
   <h2>{{ type }}</h2>
-  <div class="card"></div>
+  <textarea></textarea>
 </div>
