--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -32,8 +32,8 @@ h2 {
   font-size: 24px;
 }
 
-text-area {
-  // padding: .3rem;
+textarea {
+  @extend .text-color;
   width: 100%;
   font-size: 0.9rem;
   letter-spacing: 0.05rem;
@@ -43,10 +43,11 @@ text-area {
   cursor: text;
   overflow: hidden;
   min-height: 5rem;
+  background-color: transparent;
 }
 
 .card {
-  margin: 2rem;
+  margin: 1rem;
   padding: 1rem;
   min-height: 200px;
   box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
