feat: weapon card

--- a/src/app/rpg-angular/body/body.component.html
+++ b/src/app/rpg-angular/body/body.component.html
@@ -5,6 +5,7 @@
       <span>Ficha: Código da ficha</span>
       <app-player-traits></app-player-traits>
       <app-player-attributes></app-player-attributes>
+      <app-weapons-list></app-weapons-list>
       <app-text-area-component type="history"></app-text-area-component>
       <app-text-area-component type="annotations"></app-text-area-component>
     </div>
