--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -46,10 +46,27 @@ textarea {
   background-color: transparent;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1rem;
-  min-height: 200px;
-  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
-  border-radius: 6px;
-}
+// .card {
+//   margin: 1rem;
+//   padding: 1rem;
+//   min-height: 200px;
+//   box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+//   border-radius: 6px;
+// }
+
+// .button {
+//   background: transparent;
+//   padding: 0.5rem 0.5rem;
+//   margin: 0 0.5rem;
+//   font-size: 1rem;
+
+//   border-top-left-radius: 255px 15px;
+//   border-top-right-radius: 15px 225px;
+//   border-bottom-right-radius: 225px 15px;
+//   border-bottom-left-radius: 15px 255px;
+//   border-radius: 50%;
+// }
+
+// .button:hover {
+//   box-shadow: 2px 2px 7px rgba(226, 2, 14, 0.53);
+// }
