--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <router-outlet></router-outlet>
 
 <ul>
-  <li class="text" *ngFor="let item of items | async">
-    {{ item.name }}
+  <li *ngFor="let item of items$ | async">
+    <span>aa</span>
+    {{ item | json }}
   </li>
 </ul>
