feat: weapon card

--- a/src/app/components/weapons-list/weapon-card/weapon-card.component.html
+++ b/src/app/components/weapons-list/weapon-card/weapon-card.component.html
@@ -1,23 +1,26 @@
-<div class="container-title subtext-color font-size-text justify-around flex p025 pt05">
-  <span>Metralhadora</span>
-  <span>+A</span>
-</div>
-<div class="card">
-  <div class="container-description">
-    <img src="" alt="" />
-    <span>Espada Plasmática</span>
+<div class="relative">
+  <div class="close">X</div>
+  <div class="container-title subtext-color font-size-text justify-around flex p025 pt05">
+    <span>Metralhadora</span>
+    <span>+A</span>
   </div>
-  <span>description</span>
-
-  <div class="container-damage">
-    <div>
-      <span>fogo</span>
-      <span>D6</span>
+  <div class="flex flex-column h-100 card p05">
+    <div class="flex align-center gap05 container-description">
+      <img src="../../../../assets/github.png" alt="github" class="img-weapon" />
+      <span class="title">Espada Plasmática</span>
     </div>
+    <span class="description flex flex-fill mt05">description</span>
 
-    <div>
-      <span>alvo</span>
-      <span>Metade dos dados é sempre 2</span>
+    <div class="flex flex-column gap025 container-damage mt1">
+      <div class="flex align-center gap05">
+        <span class="material-symbols-outlined orange"> local_fire_department </span>
+        <span>D6</span>
+      </div>
+
+      <div class="flex align-center gap05">
+        <span class="material-symbols-outlined"> sports_mma </span>
+        <span class="sm-font subtext-color">+Metade dos dados é sempre 2</span>
+      </div>
     </div>
   </div>
 </div>
