feat: weapon list

--- a/src/app/components/weapons-list/weapon-card/weapon-card.component.html
+++ b/src/app/components/weapons-list/weapon-card/weapon-card.component.html
@@ -1,5 +1,5 @@
 <div class="relative">
-  <div class="close">X</div>
+  <button class="close" (click)="closeCard()">X</button>
   <div class="container-title subtext-color font-size-text justify-around flex p025 pt05">
     <span>Metralhadora</span>
     <span>+A</span>
