--- a/src/app/components/weapons-list/weapons-list.component.html
+++ b/src/app/components/weapons-list/weapons-list.component.html
@@ -1,3 +1,11 @@
-<div class="flex flex-wrap mt1 justify-around">
-  <app-weapon-card *ngFor="let card of data"></app-weapon-card>
+<div class="flex flex-column mt1">
+  <div class="flex justify-between">
+    <h2>Equipamento:</h2>
+    <button class="button-add" routerLink="create-weapon">
+      <span class="material-symbols-outlined"> add </span>
+    </button>
+  </div>
+  <div class="flex flex-wrap mt05 justify-around">
+    <app-weapon-card *ngFor="let card of data"></app-weapon-card>
+  </div>
 </div>
