--- a/src/app/rpg-angular/body/body.component.html
+++ b/src/app/rpg-angular/body/body.component.html
@@ -1,14 +1,7 @@
 <div class="wrapper">
   <app-header></app-header>
   <div class="background-color text-color flex-fill">
-    <div class="p1 max-size">
-      <span>Ficha: Código da ficha</span>
-      <app-player-traits></app-player-traits>
-      <app-player-attributes></app-player-attributes>
-      <app-weapons-list></app-weapons-list>
-      <app-text-area-component type="history"></app-text-area-component>
-      <app-text-area-component type="annotations"></app-text-area-component>
-    </div>
+    <router-outlet></router-outlet>
   </div>
   <app-footer></app-footer>
 </div>
