--- a/src/app/rpg-angular/body/body.component.html
+++ b/src/app/rpg-angular/body/body.component.html
@@ -1,7 +1,9 @@
 <div class="wrapper">
   <app-header></app-header>
   <div class="background-color text-color flex-fill">
-    <router-outlet></router-outlet>
+    <div class="p1 max-size">
+      <router-outlet></router-outlet>
+    </div>
   </div>
   <app-footer></app-footer>
 </div>
