--- a/src/app/rpg-angular/body/body.component.html
+++ b/src/app/rpg-angular/body/body.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="flex flex-column min-h-100">
   <app-header></app-header>
   <div class="background-color text-color flex-fill">
     <div class="p1 max-size">
