--- a/src/styles/helper.scss
+++ b/src/styles/helper.scss
@@ -322,12 +322,24 @@
   z-index: 1;
 }
 
+.min-h-100 {
+  min-height: 100vh;
+}
+
+.min-h-80 {
+  min-height: 80vh;
+}
+
 .font-size-title {
   font-size: 1rem;
 }
 
 .font-size-text {
   font-size: 0.875rem;
+}
+
+.font-size-sm {
+  font-size: 0.775rem;
 }
 
 .border-radius {
