fix: footer responsive

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="accent-container">
   <div class="p2 flex flex-column align-center gap1">
     <span class="font-size-title">Created By Felipe Scherer</span>
-    <div class="flex gap1">
+    <div class="flex justify-center flex-wrap gap1">
       <a href="https://www.linkedin.com/in/ofelipescherer/" target="_blank" alt="Linkedin">
         <img
           src="https://img.shields.io/badge/-Linkedin-0e76a8?logo=Linkedin&logoColor=white&https://www.linkedin.com/in/ofelipescherer/"
