--- a/src/app/components/weapons-list/weapon-page/weapon-page.component.scss
+++ b/src/app/components/weapons-list/weapon-page/weapon-page.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../styles/theme.scss';
+
 .search-container {
   background-color: #fff;
   display: flex;
@@ -34,10 +36,44 @@
     }
   }
   &:focus-within {
-    outline: 1px solid red;
+    outline: 1px solid var(--background-accent);
   }
 }
 
 .container {
   max-width: 500px;
+}
+
+.btn {
+  @extend .background-accent;
+  padding: 0.5rem;
+  border-radius: 5px;
+}
+
+.btn-back {
+  @extend .btn;
+  background-color: transparent;
+  border: 1px solid var(--background-accent);
+
+  &:hover {
+    background-color: rgba(173, 173, 173, 0.644);
+  }
+}
+
+.btn-add {
+  @extend .btn;
+  background-color: green;
+  color: #ffffff;
+
+  &:hover {
+    background-color: rgb(0, 88, 0);
+  }
+}
+
+select {
+  background: #fff;
+  color: var(--text-color);
+  border: 1px solid #0e0e0e1f;
+  padding: 4px;
+  border-radius: 3px;
 }
