--- a/src/app/rpg-angular/body/body.component.html
+++ b/src/app/rpg-angular/body/body.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-column min-h-100">
   <app-header></app-header>
   <div class="background-color text-color flex-fill">
-    <div class="p1 max-size">
+    <div class="pt1 pb1 pr1 max-size">
       <router-outlet></router-outlet>
     </div>
   </div>
