--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,7 +10,8 @@ body {
   margin: 0;
   font-family: Raleway, Special Elite, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
 }
 
 a {
@@ -70,3 +71,39 @@ textarea {
 // .button:hover {
 //   box-shadow: 2px 2px 7px rgba(226, 2, 14, 0.53);
 // }
+
+.btn {
+  @extend .background-accent;
+  padding: 0.5rem;
+  border-radius: 5px;
+}
+
+.btn-back {
+  @extend .btn;
+  background-color: transparent;
+  border: 1px solid var(--background-accent);
+
+  &:hover {
+    background-color: rgba(173, 173, 173, 0.644);
+  }
+}
+
+.btn-add {
+  @extend .btn;
+  background-color: green;
+  color: #ffffff;
+
+  &:hover {
+    background-color: rgb(0, 88, 0);
+  }
+}
+
+.btn-danger {
+  @extend .btn;
+  background-color: rgb(153, 0, 0);
+  color: #ffffff;
+
+  &:hover {
+    background-color: rgb(117, 0, 0);
+  }
+}
