feat: firebase implementation

--- a/src/app/rpg-angular/body/character-sheet/character-sheet.component.html
+++ b/src/app/rpg-angular/body/character-sheet/character-sheet.component.html
@@ -20,7 +20,7 @@
     <div class="mb1 flex flex-wrap gap1">
       <button class="btn-danger">Deletar</button>
       <button class="btn-back">Atualizar</button>
-      <button class="btn-add">Salvar</button>
+      <button class="btn-add" (click)="updateCH()">Salvar</button>
     </div>
     <div>
       <span>Ficha: Código da ficha</span>
