--- a/src/app/components/player-traits/player-traits.component.scss
+++ b/src/app/components/player-traits/player-traits.component.scss
@@ -1,5 +1,7 @@
+@import '../../../styles/theme.scss';
+
 .search-container {
-  background-color: #fff;
+  background-color: var(--background-input);
   display: flex;
   // justify-content: center;
   align-items: center;
@@ -26,7 +28,7 @@
     color: rgba(115, 115, 115, 0.4);
   }
   input {
-    color: #000;
+    color: var(--text-color);
     font-size: 1rem;
     padding: 0.5rem;
     border: none;
