--- a/src/app/components/weapons-list/weapon-page/weapon-page.component.scss
+++ b/src/app/components/weapons-list/weapon-page/weapon-page.component.scss
@@ -1,7 +1,7 @@
 @import '../../../../styles/theme.scss';
 
 .search-container {
-  background-color: #fff;
+  background-color: var(--background-input);
   display: flex;
   // justify-content: center;
   align-items: center;
@@ -27,6 +27,7 @@
     color: rgba(115, 115, 115, 0.4);
   }
   input {
+    color: var(--text-color);
     padding: 0.5rem;
     border: none;
 
