--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,6 +1,7 @@
 :root,
 html[data-theme='light'] {
   --background-color: #f4f4f4;
+  --background-input: #ffffff;
   --background-accent: #000c66;
   --text-color: #121218;
   --subtext-color: #00000080;
@@ -10,6 +11,7 @@ html[data-theme='light'] {
 
 html[data-theme='dark'] {
   --background-color: #1d1d1d;
+  --background-input: #313131;
   --background-accent: #000630;
   --text-color: #ececec;
   --subtext-color: #ffffff80;
