--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
       <div>
         <h1 class="font-size-title">What Happened in that Day</h1>
 
-        <span class="font-size-text mt05">Code: mockado</span>
+        <span class="font-size-text mt05" *ngIf="id">Code: {{ id }}</span>
       </div>
 
       <div class="flex gap05 align-center">
@@ -13,10 +13,10 @@
 
           <span *ngIf="theme === 'light'" class="material-symbols-outlined"> light_mode </span>
         </button>
-        <span style="font-size: 30px; cursor: pointer" (click)="openNav2()">&#9776;</span>
-        <div class="overlay" id="overlay" (click)="closeNav2()"></div>
+        <span style="font-size: 30px; cursor: pointer" (click)="openNav()">&#9776;</span>
+        <div class="overlay" id="overlay" (click)="closeNav()"></div>
         <div id="mySidenav" class="sidenav background-accent">
-          <span class="material-symbols-outlined btn-close" (click)="closeNav2()"> close </span>
+          <span class="material-symbols-outlined btn-close" (click)="closeNav()"> close </span>
           <a href="#" target="_blank">Documento de Regras</a>
           <a href="#" target="_blank">Notas</a>
           <a href="#" target="_blank">Regras de Combate</a>
