--- a/src/app/components/player-traits/player-traits.component.scss
+++ b/src/app/components/player-traits/player-traits.component.scss
@@ -32,6 +32,7 @@
     font-size: 1rem;
     padding: 0.5rem;
     border: none;
+    width: 100%;
 
     background-color: transparent;
     &:focus {
