--- a/src/app/components/weapons-list/weapon-page/weapon-page.component.scss
+++ b/src/app/components/weapons-list/weapon-page/weapon-page.component.scss
@@ -27,6 +27,7 @@
     color: rgba(115, 115, 115, 0.4);
   }
   input {
+    width: 100%;
     color: var(--text-color);
     padding: 0.5rem;
     border: none;
