--- a/src/app/rpg-angular/home/home.component.scss
+++ b/src/app/rpg-angular/home/home.component.scss
@@ -27,6 +27,7 @@
     color: rgba(115, 115, 115, 0.4);
   }
   input {
+    width: 100%;
     color: var(--text-color);
     font-size: 1rem;
     padding: 0.5rem;
