--- a/src/app/components/player-traits/player-traits.component.html
+++ b/src/app/components/player-traits/player-traits.component.html
@@ -1,6 +1,24 @@
 <div class="flex flex-column gap05">
-  <div class="search-container mt-2 mb-05">
-    <input [formControl]="name" type="text" class="w-100" placeholder="Nome" />
+  <h2>Personagem:</h2>
+  <div class="flex flex-column gap05">
+    <div class="search-container mt-2 mb-05">
+      <input [formControl]="name" type="text" class="w-100" placeholder="Nome" />
+    </div>
+
+    <div class="search-container mt-2 mb-05">
+      <input [formControl]="spark" type="text" class="w-100" placeholder="Efeito Spark" />
+    </div>
+
+    <div class="flex align-center justify-between">
+      <label for="description">Origem: </label>
+      <select name="weaponType" [formControl]="origin">
+        <option value="protocity">Protocity</option>
+        <option value="melee-heavy">Melee Pesada</option>
+        <option value="pistol">Pistola</option>
+        <option value="shotgun">Fuzil</option>
+        <option value="machine-gun">Metralhadora</option>
+      </select>
+    </div>
   </div>
 
   <div class="flex gap1 align-center justify-between flex-wrap font-size-text">
