--- a/src/app/components/weapons-list/weapon-page/weapon-page.component.scss
+++ b/src/app/components/weapons-list/weapon-page/weapon-page.component.scss
@@ -47,7 +47,7 @@
 }
 
 select {
-  background: #fff;
+  background: var(--background-input);
   color: var(--text-color);
   border: 1px solid #0e0e0e1f;
   padding: 4px;
