--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -39,12 +39,13 @@ textarea {
   font-size: 0.9rem;
   letter-spacing: 0.05rem;
   resize: vertical;
-  border: 1px solid #7e7e7e;
+  border: 1px solid #7e7e7e62;
   border-radius: 8px;
   cursor: text;
   overflow: hidden;
   min-height: 5rem;
-  background-color: transparent;
+  color: var(--text-color);
+  background-color: var(--background-input);
 }
 
 // .card {
