feat: refresh button

--- a/src/app/rpg-angular/body/character-sheet/character-sheet.component.html
+++ b/src/app/rpg-angular/body/character-sheet/character-sheet.component.html
@@ -19,7 +19,7 @@
   <div class="flex flex-column align-end pl2">
     <div class="mb1 flex flex-wrap gap1">
       <button class="btn-danger">Deletar</button>
-      <button class="btn-back">Atualizar</button>
+      <button class="btn-back" (click)="refresh()">Atualizar</button>
       <button class="btn-add" (click)="updateCS()">Salvar</button>
     </div>
     <div>
