--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -7,7 +7,7 @@
   height: 100%;
   width: 0;
   position: fixed;
-  width: 50%;
+  width: 260px;
   z-index: 1;
   gap: 1rem;
   top: 0;
@@ -38,7 +38,7 @@
     width: 0px;
   }
   100% {
-    width: 50%;
+    width: 260px;
   }
 }
 
