--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,11 +17,31 @@
         <div class="overlay" id="overlay" (click)="closeNav()"></div>
         <div id="mySidenav" class="sidenav background-accent">
           <span class="material-symbols-outlined btn-close" (click)="closeNav()"> close </span>
-          <a href="#" target="_blank">Documento de Regras</a>
-          <a href="#" target="_blank">Notas</a>
-          <a href="#" target="_blank">Regras de Combate</a>
-          <a href="#" target="_blank">Lista de Equipamentos</a>
-          <a href="#" target="_blank">Regras de Estabilidade</a>
+          <a
+            href="https://github.com/ofelipescherer/rpg-angular-v2/blob/main/src/rules-readme/rules.md"
+            target="_blank"
+            >Documento de Regras</a
+          >
+          <a
+            href="https://github.com/ofelipescherer/rpg-angular-v2/blob/main/src/rules-readme/notes.md"
+            target="_blank"
+            >Notas</a
+          >
+          <a
+            href="https://github.com/ofelipescherer/rpg-angular-v2/blob/main/src/rules-readme/combat.md"
+            target="_blank"
+            >Regras de Combate</a
+          >
+          <a
+            href="https://github.com/ofelipescherer/rpg-angular-v2/blob/main/src/rules-readme/equipment.md"
+            target="_blank"
+            >Lista de Equipamentos</a
+          >
+          <a
+            href="https://github.com/ofelipescherer/rpg-angular-v2/blob/main/src/rules-readme/stability.md"
+            target="_blank"
+            >Regras de Estabilidade</a
+          >
         </div>
       </div>
     </div>
