feat: player attributes

--- a/src/app/components/player-traits/player-traits.component.scss
+++ b/src/app/components/player-traits/player-traits.component.scss
@@ -91,6 +91,7 @@ select {
 .defence-button {
   border: 1px solid #0e0e0e1f;
   border-radius: 5px;
+  width: 110px;
   padding: 0.25rem 1rem;
   color: #ffffff;
   background-color: #ff0000;
