--- a/src/app/components/player-attributes/player-attribute/player-attribute.component.html
+++ b/src/app/components/player-attributes/player-attribute/player-attribute.component.html
@@ -1,6 +1,9 @@
-<div class="flex align-center container">
-  <div class="container-value flex p05 flex-column align-center">
-    <span class="title font-size-title">000</span>
+<div class="flex align-center container" [ngStyle]="{ 'box-shadow': '2px 2px 7px ' + '#' + data?.color }">
+  <div
+    class="container-value flex p05 flex-column align-center"
+    [ngStyle]="{ 'background-color': '#' + data?.color }"
+  >
+    <span class="title font-size-title">{{ data?.totalValue | number: '3.0' }}</span>
     <span class="subtitle font-size-text">000</span>
   </div>
   <div class="relative flex flex-fill justify-center">
@@ -8,6 +11,6 @@
       <span class="material-symbols-outlined"> info </span>
       <!-- <span>{{ data?.info }}</span> -->
     </button>
-    <span>{{ data?.title }}</span>
+    <span>{{ data?.name }}</span>
   </div>
 </div>
